# coreBoard

./: .gitignore  CMakeLists.txt  CoreBoard.rc  README.md  RELEASE_0.6.1-beta.md  angularvieweritem.cpp  angularvieweritem.h  backup_nohBoard_example.json  controlleritem.cpp  controlleritem.h  default.json  dialogkeycodechange.cpp  dialogkeycodechange.h  dialoglabelstyle.cpp  dialoglabelstyle.h  dialogstyle.cpp  dialogstyle.h  dialogtextchange.cpp  dialogtextchange.h  gamepadlistener.cpp  gamepadlistener.h  globalkeylistener.cpp  globalkeylistener.h  keyboard_layout.json  keyboardwidget.cpp  keyboardwidget.h  keycode_nameutil.cpp  keyitem.cpp  keyitem.h  keystyle.h  labelitem.cpp  labelitem.h  labelsettingsdialog.cpp  languagesettingsdialog.cpp  languagesettingsdialog.h  layouteditor.cpp  layouteditor.h  layouteditorgraphicsview.cpp  layouteditorgraphicsview.h  layoutsettings.cpp  (+31 more)
docs/: NOHBOARD_MIGRATION.md  TRANSLATION_STRINGS_INVENTORY.md
installer/: README.md
src/: angularvieweritem.cpp  angularvieweritem.h  controllerregionsdialog.cpp  controllerregionsdialog.h  dialogkeycodechange.cpp  dialogkeycodechange.h  dialoglabelstyle.cpp  dialoglabelstyle.h  dialogstyle.cpp  dialogstyle.h  dialogtextchange.cpp  dialogtextchange.h  gamepadlistener.cpp  gamepadlistener.h  keyboardwidget.cpp  keyboardwidget.h  keycode_nameutil.cpp  keycode_nameutil.h  labelitem.cpp  labelitem.h  labelsettingsdialog.h  languagesettingsdialog.cpp  layouteditor.cpp  layouteditor.h  layouteditorgraphicsview.cpp  layouteditorgraphicsview.h  layoutsettings.h  mainwindow.h  mainwindow.ui  resizablepathitem.h  resizablepolygonitem.cpp  resizablepolygonitem.h  resizablerectitem.cpp  resizablerectitem.h  settingsdialog.cpp  shapeeditordialog.cpp  versioninfo.h  welcomedialog.cpp  windowskeylistener.h  windowsmouselistener.cpp
translations/: CoreBoard_de_DE.qm  CoreBoard_de_DE.ts  CoreBoard_en_US.qm  CoreBoard_en_US.ts  CoreBoard_fr_FR.qm  CoreBoard_fr_FR.ts  cmd.txt  translation_de_DE.ts  translation_fr_FR.ts
